<resources>
    <string name="app_name">VITS Client</string>
    <string name="length_scale_text">Length Scale : %.3f</string>
    <string name="noise_scale_text">Noise Scale: %.3f</string>
    <string name="noise_scale_w_text">Noise Scale W: %.3f</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="japanese">Japanese</string>
    <string name="text_prompt">Enter text to speak</string>
    <string name="speak">Speak</string>
    <string name="network">Network</string>
    <string name="server_address">Server Address</string>
    <string name="server_address_info">Enter the base URL for API</string>
    <string name="settings">Settings</string>
    <string name="reload_button">Reload</string>
    <string name="open_tts_settings">Open TTS Settings</string>
    <string name="korean">Korean</string>
    <string name="generation">Generation</string>
    <string name="override_params">Override Parameters</string>
    <string name="override_params_hint">Enable to force generation parameters to be set as below</string>
    <string name="length_scale_input">Length Scale</string>
    <string name="length_scale_hint">Control TTS audio duration</string>
    <string name="noise_scale_input">Noise Scale</string>
    <string name="noise_scale_hint">Control emotion change speed</string>
    <string name="noise_scale_w_input">Noise Scale W</string>
    <string name="noise_scale_w_hint">Control vowel duration</string>
    <string name="defaults">Defaults</string>
    <string name="reconnect">Reconnect</string>
    <string name="reconnect_hint">Click here to reconnect</string>
    <string name="default_character">Default Character</string>
    <string name="reconnect_success">Reconnect success</string>
    <string name="reconnect_failed">Reconnect failed</string>
    <string name="unselected">Not selected</string>

    <string name="characters">Characters</string>
    <string name="use_secondary_character">Enable secondary character</string>
    <string name="use_secondary_character_summary">Read the text inside quotes using secondary character</string>
    <string name="secondary_character">Secondary Character</string>
    <string name="force_language">Force language</string>
    <string name="force_language_summary">Manually specify the language</string>
</resources>