<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/network">

    <EditTextPreference
        android:key="server_url"
        android:title="@string/server_address"
        android:summary="@string/server_address_info"
        android:defaultValue="http://192.168.2.41:51817"/>

        <Preference
        android:key="reconnect_button"
        android:title="@string/reconnect"
        android:summary="@string/reconnect_hint"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="character_category"
        android:title="@string/characters">

        <ListPreference
            android:key="default_character"
            android:defaultValue="0"
            android:title="@string/default_character"
            android:summary="@string/unselected"/>

        <SwitchPreference
        android:key="enable_secondary_character"
        android:title="@string/use_secondary_character"
        android:summary="@string/use_secondary_character_summary"
        android:defaultValue="false" />

        <ListPreference
            android:key="secondary_character"
            android:defaultValue="0"
            android:title="@string/secondary_character"
            android:summary="@string/unselected"
            android:dependency="enable_secondary_character"/>

        <ListPreference
            android:key="force_language"
            android:defaultValue="null"
            android:title="@string/force_language"
            android:summary="@string/unselected"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="generation_category"
        android:title="@string/generation">

        <SwitchPreferenceCompat
            android:key="override_parameters"
            android:title="@string/override_params"
            android:summary="@string/override_params_hint"
            android:defaultValue="false"/>

        <EditTextPreference
            android:key="length_scale"
            android:title="@string/length_scale_input"
            android:summary="@string/length_scale_hint"
            android:defaultValue="1.2"
            android:inputType="numberDecimal"
            android:dependency="override_parameters"/>

        <EditTextPreference
            android:key="noise_scale"
            android:title="@string/noise_scale_input"
            android:summary="@string/noise_scale_hint"
            android:defaultValue="0.6"
            android:inputType="numberDecimal"
            android:dependency="override_parameters"/>

        <EditTextPreference
            android:key="noise_scale_w"
            android:title="@string/noise_scale_w_input"
            android:summary="@string/noise_scale_w_hint"
            android:defaultValue="0.875"
            android:inputType="numberDecimal"
            android:dependency="override_parameters"/>

    </PreferenceCategory>
</PreferenceScreen>
