<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/design_default_color_primary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
        app:title="@string/app_name"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/text_input"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:gravity="top|left"
                android:hint="@string/text_prompt"
                android:inputType="text|textMultiLine"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/speaker_spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:spinnerMode="dialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input" />

            <Spinner
                android:id="@+id/language_spinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/speaker_spinner" />

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/language_spinner">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/length_scale_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/length_scale_text" />

                    <SeekBar
                        android:id="@+id/length_scale_seekbar"
                        android:layout_width="252dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:padding="8dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/noise_scale_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/noise_scale_text" />

                    <SeekBar
                        android:id="@+id/noise_scale_seekbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/noise_scale_w_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/noise_scale_w_text" />

                    <SeekBar
                        android:id="@+id/noise_scale_w_seekbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp" />
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/speak_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="onTtsButtonClick"
                android:text="@string/speak"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent">

                <Button
                    android:id="@+id/settings_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings" />

                <Button
                    android:id="@+id/open_tts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/open_tts_settings" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>